--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul class="container">
 					<li><a href="#top">Kancelaria</a></li>
 					<li><a href="#work">Zakres praktyki</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#portfolio">Dane adresowe</a></li>
 					<li><a href="#contact">Kontakt</a></li>
 				</ul>
 			</nav>
@@ -31,7 +31,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/1.jpg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
