--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Michał Karaś - Kancelaria Radcy Prawnego, Świnoujście</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -35,10 +35,11 @@
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1><strong>Michał Karaś</strong></h1>
+								<p>radca prawny
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-							<a href="#work" class="button big scrolly">Learn about what I do</a>
+							<p>Kancelaria świadczy pomoc prawną osobom nieprowadzącym działalności gospodarczej oraz przedsiębiorcom.</p>
+							<a href="#work" class="button big scrolly">Zakres praktyki</a>
 						</div>
 					</div>
 				</article>
@@ -48,37 +49,36 @@
 			<div class="wrapper style2">
 				<article id="work">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Kancelaria świadczy pomoc prawną w następującym zakresie:</h2>
 					</header>
 					<div class="container">
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-comments-o"></span>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<!--	<span class="icon featured fa-comments-o"></span>-->
+									<h3>Sprawy cywilne</h3>
+									<p>Zastępowanie klientów przed sądami powszechnymi oraz Sądem Najwyższym w sprawach cywilnych w tym również sprawach rodzinnych i z zakresu prawa pracy.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-camera-retro"></span>
-									<h3>Lorem dolor tempus</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<!--	<span class="icon featured fa-camera-retro"></span>-->
+									<h3>Sprawy gospodarcze</h3>
+									<p>Udzielanie porad prawnych, wspieranie przedsiębiorców w prowadzeniu przez nich działalności gospodarczej, konstruowanie i opiniowanie umów, wspracie w negocjacjach.</p>
 								</section>
 							</div>
 							<div class="4u 12u(mobile)">
 								<section class="box style1">
-									<span class="icon featured fa-thumbs-o-up"></span>
-									<h3>Feugiat posuere</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<!--	<span class="icon featured fa-thumbs-o-up"></span> -->
+									<h3>Sprawy administracyjne</h3>
+									<p>Reprezentacja przed organami administracji publicznej i samorządu terytorialnego, zastępstwo przed Wojewódzkimi Sądami Administracyjnymi.</p>
 								</section>
 							</div>
 						</div>
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
+						<a href="#portfolio" class="button big scrolly">Dane adresowe</a>
 					</footer>
 				</article>
 			</div>
@@ -87,65 +87,20 @@
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
+						<h2>Michał Karaś</h2>
+						<p><h3>Kancelaria Radcy Prawnego</h3></p>
+						<p><h4>ulica Piłsudskiego numer 10</h4></p>
+						<p><h4>72-600 Świnoujście</h4></p>
+						<p><h4>telefon: 601-311-008 @: kancelaria@michalkaras.pl</h4></p>
 					</header>
-					<div class="container">
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-									<h3><a href="#">Magna feugiat</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-									<h3><a href="#">Veroeros primis</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<h3><a href="#">Lorem ipsum</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-						</div>
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<h3><a href="#">Tempus dolore</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-									<h3><a href="#">Feugiat aliquam</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-									<h3><a href="#">Sed amet ornare</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-						</div>
-					</div>
+					<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
+					&markers=color:blue|label:Kancelaria|53.909974,14.249018">
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button big scrolly">Get in touch with me</a>
+						<a href="#contact" class="button big scrolly">Wyślij wiadomość</a>
 					</footer>
 				</article>
 			</div>
-
-		<!-- Contact -->
+			<!-- Contact -->
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
 					<header>
