--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 						<p><h4>72-600 Świnoujście</h4></p>
 						<p><h4>telefon: 601-311-008 @: kancelaria@michalkaras.pl</h4></p>
 					</header>
-					<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
-					&markers=color:blue|label:Kancelaria|53.909974,14.249018">
+					<!--<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
+					&markers=color:blue|label:Kancelaria|53.909974,14.249018">-->
 					<footer>
 						<a href="#contact" class="button big scrolly">Wyślij wiadomość</a>
 					</footer>
