--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
 					<header>
 						<h2>Michał Karaś</h2>
 						<p><h3>Kancelaria Radcy Prawnego</h3></p>
-						<p><h4>ulica Piłsudskiego numer 10</h4></p>
-						<p><h4>72-600 Świnoujście</h4></p>
-						<p><h4>telefon: (0048) 601-311-008</p>
-						<p><h4>tel./fax n: (0048) 91 321 57 60</p>
-						</p>@: kancelaria@michalkaras.pl</h4>
+						<p>ulica Piłsudskiego 10</p>
+						<p>72-600 Świnoujście</p>
+						<p>telefon: +48 601-311-008, tel./fax: +48 91 321 57 60</p>
+						<p>@: kancelaria@michalkaras.pl</p>
 					</header>
 					<!--<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
 					&markers=color:blue|label:Kancelaria|53.909974,14.249018">-->
