--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<p>ulica Piłsudskiego 10</p>
 						<p>72-600 Świnoujście</p>
 						<p>telefon: +48 601-311-008, tel./fax: +48 91 321 57 60</p>
-						<p>@: kancelaria@michalkaras.pl</p>
+						<p>kancelaria@michalkaras.pl</p>
 					</header>
 					<!--<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
 					&markers=color:blue|label:Kancelaria|53.909974,14.249018">-->
