--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<p><h3>Kancelaria Radcy Prawnego</h3></p>
 						<p>ulica Piłsudskiego 10</p>
 						<p>72-600 Świnoujście</p>
-						<p>telefon: +48 601-311-008, tel./fax: +48 91 321 57 60</p>
+						<p>telefon: +48 601-311-008, tel./fax: +48 91-321-57-60</p>
 						<p>kancelaria@michalkaras.pl</p>
 					</header>
 					<!--<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
@@ -104,8 +104,7 @@
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
+						<h2>Kontakt z kancelarią</h2>
 					</header>
 					<div>
 						<div class="row">
@@ -114,27 +113,27 @@
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
-												<input type="text" name="name" id="name" placeholder="Name" />
+												<input type="text" name="name" id="name" placeholder="Imię" />
 											</div>
 											<div class="6u 12u(mobile)">
-												<input type="text" name="email" id="email" placeholder="Email" />
+												<input type="text" name="email" id="email" placeholder="Adres email" />
 											</div>
 										</div>
 										<div class="row">
 											<div class="12u">
-												<input type="text" name="subject" id="subject" placeholder="Subject" />
+												<input type="text" name="subject" id="subject" placeholder="Temat" />
 											</div>
 										</div>
 										<div class="row">
 											<div class="12u">
-												<textarea name="message" id="message" placeholder="Message"></textarea>
+												<textarea name="message" id="message" placeholder="Treść wiadomości"></textarea>
 											</div>
 										</div>
 										<div class="row 200%">
 											<div class="12u">
 												<ul class="actions">
-													<li><input type="submit" value="Send Message" /></li>
-													<li><input type="reset" value="Clear Form" class="alt" /></li>
+													<li><input type="submit" value="Wyśli wiadomość" /></li>
+													<li><input type="reset" value="Wyczyść formularz" class="alt" /></li>
 												</ul>
 											</div>
 										</div>
@@ -142,37 +141,9 @@
 								</form>
 							</div>
 						</div>
-						<div class="row">
-							<div class="12u">
-								<hr />
-								<h3>Find me on ...</h3>
-								<ul class="social">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									<!--
-									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
-									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
-									<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
-									<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-									<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
-									<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
-									<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
-									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
-									-->
-								</ul>
-								<hr />
-							</div>
-						</div>
-					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Michał Karaś Kancelaria Radcy Prawnego. Wszystkie prawa zastrzeżone.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</article>
