--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<form method="post" action="#">
+								<form method="post" action="http://formspree.io/kancelaria@michalkaras.pl">
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
