--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Kontakt z kancelarią</h2>
+						<p> Formularz kontaktowy nie zapełnia poufności komunikacji z kancelarią</p>
+						<p>Proszę nie przesyłać w nim ważkich informacji.</p>
 					</header>
 					<div>
 						<div class="row">
