--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
 				<article id="contact" class="container 75%">
 					<header>
 						<h2>Kontakt z kancelarią</h2>
-						<p> Formularz kontaktowy nie zapełnia poufności komunikacji z kancelarią</p>
+						<p> Formularz kontaktowy nie zapewnia poufności komunikacji z kancelarią.</p>
 						<p>Proszę nie przesyłać w nim ważkich informacji.</p>
+						<p>Dla osób korzystających z oprogramowania do szyfrowania poczty elektronicznej (PGP/GnuPG) udostępniam <a href="http://n33.co">klucz publiczny</a>,</p>
 					</header>
 					<div>
 						<div class="row">
