--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<h2>Kontakt z kancelarią</h2>
 						<p> Formularz kontaktowy nie zapewnia poufności komunikacji z kancelarią.</p>
 						<p>Proszę nie przesyłać w nim ważkich informacji.</p>
-						<p>Dla osób korzystających z oprogramowania do szyfrowania poczty elektronicznej (PGP/GnuPG) udostępniam <a href="http://n33.co">klucz publiczny</a>,</p>
+						<p>Dla osób korzystających z oprogramowania do szyfrowania poczty elektronicznej (PGP/GnuPG) udostępniam <a href="https://krpmk.github.io/kancelaria@michalkaras.pl-pubkey.asc">klucz publiczny</a>.</p>
 					</header>
 					<div>
 						<div class="row">
