--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+	
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+<head>
 		<title>Michał Karaś - Kancelaria Radcy Prawnego, Świnoujście</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -39,7 +41,7 @@
 								<p>radca prawny
 							</header>
 							<p>Kancelaria świadczy pomoc prawną osobom nieprowadzącym działalności gospodarczej oraz przedsiębiorcom.</p>
-							<a href="#work" class="button big scrolly">Zakres praktyki</a>
+							<a href="#work" class="more scrolly">Zakres praktyki</a>
 						</div>
 					</div>
 				</article>
@@ -77,7 +79,7 @@
 						</div>
 					</div>
 					<footer>
-						<a href="#portfolio" class="button big scrolly">Dane adresowe</a>
+						<a href="#portfolio" class="more scrolly">Dane adresowe</a>
 					</footer>
 				</article>
 			</div>
@@ -96,7 +98,7 @@
 					<!--<img src="https://maps.googleapis.com/maps/api/staticmap?center=53.9099139,14.248817&zoom=17&size=600x300&maptype=roadmap
 					&markers=color:blue|label:Kancelaria|53.909974,14.249018">-->
 					<footer>
-						<a href="#contact" class="button big scrolly">Wyślij wiadomość</a>
+						<a href="#contact" class="more scrolly">Wyślij wiadomość</a>
 					</footer>
 				</article>
 			</div>
@@ -107,7 +109,7 @@
 						<h2>Kontakt z kancelarią</h2>
 						<p> Formularz kontaktowy nie zapewnia poufności komunikacji z kancelarią.</p>
 						<p>Proszę nie przesyłać w nim ważkich informacji.</p>
-						<p>Dla osób korzystających z oprogramowania do szyfrowania poczty elektronicznej (PGP/GnuPG) udostępniam <a href="https://krpmk.github.io/kancelaria@michalkaras.pl-pubkey.asc">klucz publiczny</a>.</p>
+						<p>Dla osób korzystających z oprogramowania do szyfrowania poczty elektronicznej (PGP/GnuPG) udostępniam <a href="kancelaria%40michalkaras.pl-pubkey.asc">klucz publiczny</a>.</p>
 					</header>
 					<div>
 						<div class="row">
@@ -146,7 +148,7 @@
 						</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Michał Karaś Kancelaria Radcy Prawnego. Wszystkie prawa zastrzeżone.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Michał Karaś Kancelaria Radcy Prawnego. Wszystkie prawa zastrzeżone.</li><li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</article>
