--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
-		<title>Michał Karaś - Kancelaria Radcy Prawnego, Świnoujście</title>
+		<title>radca prawny Michał Karaś - Kancelaria Radcy Prawnego, Świnoujście</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<meta name="description" content="Kancelaria Radcy Prawnego Michał Karaś Świnoujście pomoc prawna spadki umowy rozwód zachowek obsługa prawna firm reprezentacja przed sądem nakaz zapłaty windykacja>
 	</head>
 	<body>
 
