--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<meta name="description" content="Kancelaria Radcy Prawnego Michał Karaś Świnoujście pomoc prawna spadki umowy rozwód zachowek obsługa prawna firm reprezentacja przed sądem nakaz zapłaty windykacja>
+		<meta name="description" content="Kancelaria Radcy Prawnego Michał Karaś Świnoujście pomoc prawna spadki umowy rozwód zachowek obsługa prawna firm reprezentacja przed sądem nakaz zapłaty windykacja."/>
 	</head>
 	<body>
 
